Add contributed projects section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <hr>
 
             <p>
-                I am a first-year PhD student at UC Santa Cruz.
+                I am a second-year PhD student at UC Santa Cruz.
                 I am interested in computer architecture and other related areas.
             </p>
 
@@ -77,7 +77,7 @@
                     on Embedded Systems Design (VLSID), 2022</i>
                 <br>
                 <a href="https://arxiv.org/abs/2103.15972">arXiv</a>
-                <a href="https://github.com/erendn/pytorch-compression-for-mcu">repo</a>
+                <a href="https://github.com/erendn/pytorch-compression-for-mcu">github</a>
             </p>
             <p>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
@@ -87,8 +87,30 @@
                 <i>Workshop on Open-Source EDA Technology (WOSET), at International Conference on
                     Computer-Aided Design (ICCAD), 2021</i>
                 <br>
-                <a href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">PDF</a>
-                <a href="https://github.com/VLSIDA/OpenCache">repo</a>
+                <a href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">pdf</a>
+                <a href="https://github.com/VLSIDA/OpenCache">github</a>
+            </p>
+
+            <hr>
+
+            <!-- CONTRIBUTED PROJECTS -->
+            <h2>Contributed Projects</h2>
+            <p>
+                <b>OpenRAM</b>
+                <br>
+                OpenRAM is an award winning open-source Python framework to create the layout, netlists,
+                timing and power models, placement and routing models, and other views necessary to use
+                SRAMs in ASIC design.
+                <br>
+                <a href="https://github.com/VLSIDA/OpenRAM">github</a>
+            </p>
+            <p>
+                <b>vlsida-eda</b>
+                <br>
+                vlsida-eda is the Anaconda channel for OpenRAM and other VLSIDA lab projects.
+                <br>
+                <a href="https://anaconda.org/vlsida-eda">anaconda</a>
+                <a href="https://github.com/VLSIDA/vlsida-eda">github</a>
             </p>
 
             <hr>
@@ -101,7 +123,7 @@
                 I implemented a simulator with some image processing algorithms in JavaScript.
                 <br>
                 <a href="https://erendn.github.io/image-processor-js/">demo</a>
-                <a href="https://github.com/erendn/image-processor-js">repo</a>
+                <a href="https://github.com/erendn/image-processor-js">github</a>
             </p>
             <p>
                 <b>Pathfinder JS</b>
@@ -109,7 +131,7 @@
                 I implemented a simulator with some pathfinding algorithms in JavaScript.
                 <br>
                 <a href="https://erendn.github.io/pathfinder-js/">demo</a>
-                <a href="https://github.com/erendn/pathfinder-js">repo</a>
+                <a href="https://github.com/erendn/pathfinder-js">github</a>
             </p>
             <p>
                 <b>OutRun JS</b>
@@ -119,7 +141,7 @@
                 in JavaScript.
                 <br>
                 <a href="https://erendn.github.io/outrun-js/">demo</a>
-                <a href="https://github.com/erendn/outrun-js">repo</a>
+                <a href="https://github.com/erendn/outrun-js">github</a>
             </p>
             <p>
                 <b>Simple Games</b>
