--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <i>International Conference on VLSI Design held jointly with International Conference
                     on Embedded Systems Design (VLSID), 2022</i>
                 <br>
-                <a href="https://arxiv.org/abs/2103.15972">arXiv</a>
-                <a href="https://github.com/erendn/pytorch-compression-for-mcu">github</a>
+                <a class="horizlink" href="https://arxiv.org/abs/2103.15972">arXiv</a>
+                <a class="horizlink" href="https://github.com/erendn/pytorch-compression-for-mcu">github</a>
             </p>
             <p>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
@@ -87,8 +87,8 @@
                 <i>Workshop on Open-Source EDA Technology (WOSET), at International Conference on
                     Computer-Aided Design (ICCAD), 2021</i>
                 <br>
-                <a href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">pdf</a>
-                <a href="https://github.com/VLSIDA/OpenCache">github</a>
+                <a class="horizlink" href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">pdf</a>
+                <a class="horizlink" href="https://github.com/VLSIDA/OpenCache">github</a>
             </p>
 
             <hr>
@@ -102,15 +102,15 @@
                 timing and power models, placement and routing models, and other views necessary to use
                 SRAMs in ASIC design.
                 <br>
-                <a href="https://github.com/VLSIDA/OpenRAM">github</a>
+                <a class="horizlink" href="https://github.com/VLSIDA/OpenRAM">github</a>
             </p>
             <p>
                 <b>vlsida-eda</b>
                 <br>
                 vlsida-eda is the Anaconda channel for OpenRAM and other VLSIDA lab projects.
                 <br>
-                <a href="https://anaconda.org/vlsida-eda">anaconda</a>
-                <a href="https://github.com/VLSIDA/vlsida-eda">github</a>
+                <a class="horizlink" href="https://anaconda.org/vlsida-eda">anaconda</a>
+                <a class="horizlink" href="https://github.com/VLSIDA/vlsida-eda">github</a>
             </p>
 
             <hr>
@@ -122,40 +122,40 @@
                 <br>
                 I implemented a simulator with some image processing algorithms in JavaScript.
                 <br>
-                <a href="https://erendn.github.io/image-processor-js/">demo</a>
-                <a href="https://github.com/erendn/image-processor-js">github</a>
+                <a class="horizlink" href="https://erendn.github.io/image-processor-js/">demo</a>
+                <a class="horizlink" href="https://github.com/erendn/image-processor-js">github</a>
             </p>
             <p>
                 <b>Pathfinder JS</b>
                 <br>
                 I implemented a simulator with some pathfinding algorithms in JavaScript.
                 <br>
-                <a href="https://erendn.github.io/pathfinder-js/">demo</a>
-                <a href="https://github.com/erendn/pathfinder-js">github</a>
+                <a class="horizlink" href="https://erendn.github.io/pathfinder-js/">demo</a>
+                <a class="horizlink" href="https://github.com/erendn/pathfinder-js">github</a>
             </p>
             <p>
                 <b>OutRun JS</b>
                 <br>
                 I designed a simulator with pseudo-3D game engine for the arcade game
-                <a href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
+                <a class="horizlink" href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
                 in JavaScript.
                 <br>
-                <a href="https://erendn.github.io/outrun-js/">demo</a>
-                <a href="https://github.com/erendn/outrun-js">github</a>
+                <a class="horizlink" href="https://erendn.github.io/outrun-js/">demo</a>
+                <a class="horizlink" href="https://github.com/erendn/outrun-js">github</a>
             </p>
             <p>
                 <b>Simple Games</b>
                 <br>
                 I wrote many simple games in Java during my freshman year at Ozyegin University.
                 <br>
-                <a href="https://github.com/erendn/chess-java">chess</a>
-                <a href="https://github.com/erendn/klondike-java">klondike</a>
-                <a href="https://github.com/erendn/tetris-java">tetris</a>
-                <a href="https://github.com/erendn/snake-java">snake</a>
-                <a href="https://github.com/erendn/minesweeper-java">minesweeper</a>
-                <a href="https://github.com/erendn/pacman-java">pacman</a>
-                <a href="https://github.com/erendn/uno-java">uno</a>
-                <a href="https://github.com/erendn/monopoly-java">monopoly</a>
+                <a class="horizlink" href="https://github.com/erendn/chess-java">chess</a>
+                <a class="horizlink" href="https://github.com/erendn/klondike-java">klondike</a>
+                <a class="horizlink" href="https://github.com/erendn/tetris-java">tetris</a>
+                <a class="horizlink" href="https://github.com/erendn/snake-java">snake</a>
+                <a class="horizlink" href="https://github.com/erendn/minesweeper-java">minesweeper</a>
+                <a class="horizlink" href="https://github.com/erendn/pacman-java">pacman</a>
+                <a class="horizlink" href="https://github.com/erendn/uno-java">uno</a>
+                <a class="horizlink" href="https://github.com/erendn/monopoly-java">monopoly</a>
             </p>
 
             <hr>
