Fix wrong CSS in link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <b>OutRun JS</b>
                 <br>
                 I designed a simulator with pseudo-3D game engine for the arcade game
-                <a class="horizlink" href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
+                <a href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
                 in JavaScript.
                 <br>
                 <a class="horizlink" href="https://erendn.github.io/outrun-js/">demo</a>
