Update Hasan Unlu's website link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>
                 <b>An Automated Flow for PyTorch Model Compression and Deployment on Microcontrollers</b>
                 <br>
-                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="https://www.linkedin.com/in/hasanunlu/">Hasan Unlu</a>
+                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="https://hasanunlu.github.io/">Hasan Unlu</a>
                 <br>
                 <i>International Conference on VLSI Design held jointly with International Conference
                     on Embedded Systems Design (VLSID), 2022</i>
