--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <br>
                         <a href="https://www.ucsc.edu">University of California, Santa Cruz</a>
                         <br>
-                        <a href="mailto:erdogan@ucsc.edu">erdogan@ucsc.edu</a>
+                        <a href="mailto:work@edogan.us">work@edogan.us</a>
                     </p>
 
                 </div>
