--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <body>
 
+    <!-- Disable background
     <div id="background-container" class="position-absolute" style="width: 100%; z-index: -5; overflow: hidden;">
         <div id="background-text" class="h1" style="color: rgb(11, 18, 10);"></div>
     </div>
+    -->
 
     <div id="column-holder" class="d-flex flex-column py-2 mx-auto">
         <div id="content-container" class="p-2 pt-5">
