--- a/index.html
+++ b/index.html
@@ -62,42 +62,68 @@
             <hr>
 
             <p>
-                I am a second-year PhD student at UC Santa Cruz.
-                I am interested in computer architecture and other related areas.
+                I am a third-year PhD student at UC Santa Cruz.
+                I am interested in computer architecture, VLSI, EDA, and other related areas.
             </p>
 
             <hr>
 
-            <!-- PUBLICATIONS -->
-            <h2>Publications</h2>
+            <div style="display:inline"><h2>Publications <span style="font-size:15px">(as main author)</span></h2></div>
             <p>
-                <b>An Automated Flow for PyTorch Model Compression and Deployment on Microcontrollers</b>
+                <b>GAT-Steiner: Rectilinear Steiner Minimal Tree Prediction Using GNNs</b>
+                <br>
+                <a href="https://bugraonal.github.io/">Bugra Onal</a><span class="hovered-span" title="Equal contribution">*</span>, Eren Dogan<span class="hovered-span" title="Equal contribution">*</span>, <a href="https://hadirkhan10.github.io/bio/">Muhammad Hadir Khan</a>, <a href="http://gutha.us/">Matthew R. Guthaus</a>
+                <br>
+                <i>International Conference on Computer-Aided Design (ICCAD), 2024</i>
+                <br>
+                <a class="horizlink" href="">ieee</a>
+                <a class="horizlink" href="https://arxiv.org/abs/2407.01440">arXiv</a>
+                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:2osOgNQ5qMEC">scholar</a>
+            </p>
+            <p>
+                <b>Deep Compression for PyTorch Model Deployment on Microcontrollers</b>
                 <br>
                 Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="https://hasanunlu.github.io/">Hasan Unlu</a>
                 <br>
-                <i>International Conference on VLSI Design held jointly with International Conference
+                <i>As Poster at International Conference on VLSI Design held jointly with International Conference
                     on Embedded Systems Design (VLSID), 2022</i>
                 <br>
                 <a class="horizlink" href="https://arxiv.org/abs/2103.15972">arXiv</a>
+                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:u-x6o8ySG0sC">scholar</a>
                 <a class="horizlink" href="https://github.com/erendn/pytorch-compression-for-mcu">github</a>
             </p>
             <p>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
                 <br>
-                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="http://gutha.us/">Matthew Guthaus</a>
+                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="http://gutha.us/">Matthew R. Guthaus</a>
                 <br>
                 <i>Workshop on Open-Source EDA Technology (WOSET), at International Conference on
                     Computer-Aided Design (ICCAD), 2021</i>
                 <br>
                 <a class="horizlink" href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">pdf</a>
+                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:d1gkVwhDpl0C">scholar</a>
                 <a class="horizlink" href="https://github.com/VLSIDA/OpenCache">github</a>
+            </p>
+
+            <hr>
+
+            <div style="display:inline"><h2>Publications <span style="font-size:15px">(as contributor)</span></h2></div>
+            <p>
+                <b>VLSI Hypergraph Partitioning with Deep Learning</b>
+                <br>
+                <a href="https://hadirkhan10.github.io/bio/">Muhammad Hadir Khan</a>, <a href="https://bugraonal.github.io/">Bugra Onal</a>, Eren Dogan, <a href="http://gutha.us/">Matthew R. Guthaus</a>
+                <br>
+                <i>As Work-in-Progress at International Symposium on Machine Learning for CAD (MLCAD), 2024</i>
+                <br>
+                <a class="horizlink" href="https://arxiv.org/abs/2407.01440">arXiv</a>
+                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:qjMakFHDy7sC">scholar</a>
             </p>
 
             <hr>
 
             <!-- CONTRIBUTED PROJECTS -->
             <h2>Contributed Projects</h2>
-            <p>
+            <div class="content">
                 <b>OpenRAM</b>
                 <br>
                 OpenRAM is an award winning open-source Python framework to create the layout, netlists,
@@ -105,19 +131,26 @@
                 SRAMs in ASIC design.
                 <br>
                 <a class="horizlink" href="https://github.com/VLSIDA/OpenRAM">github</a>
-            </p>
-            <p>
+            </div>
+            <div class="content">
                 <b>vlsida-eda</b>
                 <br>
                 vlsida-eda is the Anaconda channel for OpenRAM and other VLSIDA lab projects.
                 <br>
                 <a class="horizlink" href="https://anaconda.org/vlsida-eda">anaconda</a>
                 <a class="horizlink" href="https://github.com/VLSIDA/vlsida-eda">github</a>
+            </div>
+
+            <hr>
+
+            <h2>Service</h2>
+            <p>
+                Subreviewer at <b class="regular-font-size"><a href="https://www.dac.com/Conference/2025-Call-for-Contributions/">DAC 2025</a></b>, <b class="regular-font-size"><a href="https://mlcad.org/symposium/2024/">MLCAD 2024</a></b> and <b class="regular-font-size"><a href="https://vlsisoc2024.nl/">VLSI-SoC 2024</a></b>.
             </p>
 
             <hr>
 
-            <!-- HOBBY PROJECTS -->
+            <!--
             <h2>Hobby Projects</h2>
             <p>
                 <b>Image Processor JS</b>
@@ -161,8 +194,8 @@
             </p>
 
             <hr>
+            -->
 
-            <!-- PERSONAL -->
             <h2>Personal</h2>
             <p>
                 I am a German-Turk (<a href="https://en.wikipedia.org/wiki/Turks_in_Germany">Deutschtürke</a>),
