--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
             <div class="d-flex justify-content-around flex-wrap">
                 <a class="mx-2" href="assets/Eren_Dogan_Resume.pdf">Resume</a>
+                <a class="mx-2" href="https://orcid.org/0009-0006-0718-3593">ORCID</a>
                 <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
                 <a class="mx-2" href="https://www.linkedin.com/in/erendn/">LinkedIn</a>
                 <a class="mx-2" href="https://github.com/erendn">GitHub</a>
@@ -145,7 +146,7 @@
 
             <h2>Service</h2>
             <p>
-                Subreviewer at <b class="regular-font-size"><a href="https://www.dac.com/Conference/2025-Call-for-Contributions/">DAC 2025</a></b>, <b class="regular-font-size"><a href="https://mlcad.org/symposium/2024/">MLCAD 2024</a></b> and <b class="regular-font-size"><a href="https://vlsisoc2024.nl/">VLSI-SoC 2024</a></b>.
+                Subreviewer at <b class="regular-font-size"><a href="https://www.dac.com/Conference/2025-Call-for-Contributions/">DAC 2025</a></b>, <b class="regular-font-size"><a href="https://mlcad.org/symposium/2024/">MLCAD 2024</a></b>, and <b class="regular-font-size"><a href="https://vlsisoc2024.nl/">VLSI-SoC 2024</a></b>.
             </p>
 
             <hr>
