Update the design

--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 
 <body>
 
-    <!-- Disable background
-    <div id="background-container" class="position-absolute" style="width: 100%; z-index: -5; overflow: hidden;">
-        <div id="background-text" class="h1" style="color: rgb(11, 18, 10);"></div>
-    </div>
-    -->
-
     <div id="column-holder" class="d-flex flex-column py-2 mx-auto">
         <div id="content-container" class="p-2 pt-5">
             <div class="row">
 
                 <div class="col-9">
                     <!-- TITLE -->
-                    <h1 style="font-size: 60px;">Eren Dogan</h1>
+                    <h1 style="font-size: 40px;">Eren Dogan</h1>
                     <p>
                         PhD Student
                         <br>
@@ -69,22 +63,37 @@
 
             <hr>
 
-            <div style="display:inline"><h2>Publications <span style="font-size:15px">(as main author)</span></h2></div>
-            <p>
+            <h2>Research</h2>
+            <p style="position: relative;">
+                <span class="paper-year" style="">2024</span>
                 <b>GAT-Steiner: Rectilinear Steiner Minimal Tree Prediction Using GNNs</b>
                 <br>
-                <a href="https://bugraonal.github.io/">Bugra Onal</a><span class="hovered-span" title="Equal contribution">*</span>, Eren Dogan<span class="hovered-span" title="Equal contribution">*</span>, <a href="https://hadirkhan10.github.io/bio/">Muhammad Hadir Khan</a>, <a href="http://gutha.us/">Matthew R. Guthaus</a>
+                Bugra Onal<span class="hovered-span" title="Equal contribution">*</span>, <i>Eren Dogan</i><span class="hovered-span" title="Equal contribution">*</span>, Muhammad Hadir Khan, Matthew R. Guthaus
                 <br>
                 <i>International Conference on Computer-Aided Design (ICCAD), 2024</i>
                 <br>
-                <a class="horizlink" href="">ieee</a>
+                <a class="horizlink" href="https://dl.acm.org/doi/10.1145/3676536.3676683">acm</a>
                 <a class="horizlink" href="https://arxiv.org/abs/2407.01440">arXiv</a>
                 <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:2osOgNQ5qMEC">scholar</a>
             </p>
-            <p>
+
+            <p style="position: relative;">
+                <span class="paper-year" style="">2024</span>
+                <b>VLSI Hypergraph Partitioning with Deep Learning</b>
+                <br>
+                Muhammad Hadir Khan, Bugra Onal, <i>Eren Dogan</i>, Matthew R. Guthaus
+                <br>
+                <i>As Work-in-Progress at International Symposium on Machine Learning for CAD (MLCAD), 2024</i>
+                <br>
+                <a class="horizlink" href="https://arxiv.org/abs/2407.01440">arXiv</a>
+                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:qjMakFHDy7sC">scholar</a>
+            </p>
+
+            <p style="position: relative;">
+                <span class="paper-year" style="">2022</span>
                 <b>Deep Compression for PyTorch Model Deployment on Microcontrollers</b>
                 <br>
-                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="https://hasanunlu.github.io/">Hasan Unlu</a>
+                <i>Eren Dogan</i>, H. Fatih Ugurdag, Hasan Unlu
                 <br>
                 <i>As Poster at International Conference on VLSI Design held jointly with International Conference
                     on Embedded Systems Design (VLSID), 2022</i>
@@ -93,10 +102,12 @@
                 <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:u-x6o8ySG0sC">scholar</a>
                 <a class="horizlink" href="https://github.com/erendn/pytorch-compression-for-mcu">github</a>
             </p>
-            <p>
+
+            <p style="position: relative;">
+                <span class="paper-year" style="">2021</span>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
                 <br>
-                Eren Dogan, <a href="http://ugurdag.com/">H. Fatih Ugurdag</a>, <a href="http://gutha.us/">Matthew R. Guthaus</a>
+                <i>Eren Dogan</i>, H. Fatih Ugurdag, Matthew R. Guthaus
                 <br>
                 <i>Workshop on Open-Source EDA Technology (WOSET), at International Conference on
                     Computer-Aided Design (ICCAD), 2021</i>
@@ -104,20 +115,6 @@
                 <a class="horizlink" href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">pdf</a>
                 <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:d1gkVwhDpl0C">scholar</a>
                 <a class="horizlink" href="https://github.com/VLSIDA/OpenCache">github</a>
-            </p>
-
-            <hr>
-
-            <div style="display:inline"><h2>Publications <span style="font-size:15px">(as contributor)</span></h2></div>
-            <p>
-                <b>VLSI Hypergraph Partitioning with Deep Learning</b>
-                <br>
-                <a href="https://hadirkhan10.github.io/bio/">Muhammad Hadir Khan</a>, <a href="https://bugraonal.github.io/">Bugra Onal</a>, Eren Dogan, <a href="http://gutha.us/">Matthew R. Guthaus</a>
-                <br>
-                <i>As Work-in-Progress at International Symposium on Machine Learning for CAD (MLCAD), 2024</i>
-                <br>
-                <a class="horizlink" href="https://arxiv.org/abs/2407.01440">arXiv</a>
-                <a class="horizlink" href="https://scholar.google.com/citations?view_op=view_citation&hl=en&citation_for_view=w3pdIrkAAAAJ:qjMakFHDy7sC">scholar</a>
             </p>
 
             <hr>
@@ -146,7 +143,7 @@
 
             <h2>Service</h2>
             <p>
-                Subreviewer at <b class="regular-font-size"><a href="https://www.dac.com/Conference/2025-Call-for-Contributions/">DAC 2025</a></b>, <b class="regular-font-size"><a href="https://mlcad.org/symposium/2024/">MLCAD 2024</a></b>, and <b class="regular-font-size"><a href="https://vlsisoc2024.nl/">VLSI-SoC 2024</a></b>.
+                Reviewer at <b class="regular-font-size"><a href="https://www.dac.com/Conference/2025-Call-for-Contributions/">DAC 2025</a></b>, <b class="regular-font-size"><a href="https://mlcad.org/symposium/2024/">MLCAD 2024</a></b>, and <b class="regular-font-size"><a href="https://vlsisoc2024.nl/">VLSI-SoC 2024</a></b>.
             </p>
 
             <hr>
