--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google" content="notranslate">
     <title>Eren Dogan</title>
-    <link rel="icon" href="./assets/icon.png">
+    <link rel="icon" href="./files/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
@@ -37,7 +37,7 @@
                 <div class="col-3">
                     <!-- PHOTO -->
                     <div id="profile" class="float-end">
-                        <img src="assets/profile.jpg">
+                        <img src="files/profile.jpg">
                     </div>
                 </div>
 
@@ -46,7 +46,7 @@
             <hr>
 
             <div class="d-flex justify-content-around flex-wrap">
-                <a class="mx-2" href="assets/Eren_Dogan_Resume.pdf">Resume</a>
+                <a class="mx-2" href="files/Eren_Dogan_Resume.pdf">Resume</a>
                 <a class="mx-2" href="https://orcid.org/0009-0006-0718-3593">ORCID</a>
                 <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
                 <a class="mx-2" href="https://www.linkedin.com/in/erendn/">LinkedIn</a>
