--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
             <div class="d-flex justify-content-around flex-wrap">
                 <a class="mx-2" href="files/Eren_Dogan_Resume.pdf">Resume</a>
+                <a class="mx-2" href="files/Eren_Dogan_CV.pdf">CV</a>
                 <a class="mx-2" href="https://orcid.org/0009-0006-0718-3593">ORCID</a>
                 <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
                 <a class="mx-2" href="https://www.linkedin.com/in/erendn/">LinkedIn</a>
